# pomodoro-timer

./: .gitignore  CLAUDE.md  package.json  pomodoro.py  vite.config.ts  启动番茄钟.bat  启动番茄钟.vbs  品牌视觉规范  要求文件
pomodoro-app/: .gitignore  index.html  pnpm-lock.yaml  tailwind.config.js
pomodoro-app/src/: App.tsx  index.css
pomodoro-app/src-tauri/: Cargo.toml
pomodoro-app/src-tauri/capabilities/: default.json
src-tauri/: Cargo.toml.tmp.31012.56470af31e2d  tauri.conf.json
src-tauri/src/: lib.rs
